Fix string formatting version incompatibility + log performance